-- Fixing sed errors

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 # Override if this is the first run of the dotfiles environment
-DOTFILES_FIRST_RUN=YES
+DOTFILES_FIRST_RUN=NO
 # Override if user always should be prompted for setups loading the environment
 # DOTFILES_USER_PROMPT_SETUPS=YES
